--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,19 +2,31 @@
 <html>
 <head>
     <title>
-        {% if context.title %}
-        {{ context.title }} - Microblog
+        {% if title %}
+        {{ title }} - Microblog
         {% else %}
         Welcome to Microblog!
         {% endif %}
     </title>
 </head>
 <body>
-<h1>
-    Hello, {{ context.user.username }}!!!!
-</h1>
-<hr>
-{% block content %}
-{% endblock %}
+    <div>
+        Microblog:
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('login') }}">Login</a>
+    </div>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
