--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,37 +4,37 @@
 <table>
     <tr valign="top">
         <td>
-            <img src="{{ context.user.avatar(128) }}">
+            <img src="{{ user.avatar(128) }}">
         </td>
         <td>
             <h1>
-                User: {{ context.user.username }}
+                User: {{ user.username }}
             </h1>
-            {% if context.user.about_me %}
+            {% if user.about_me %}
             <p>
-                {{ context.user.about_me }}
+                {{ user.about_me }}
             </p>
             {% endif %}
-            {% if context.user.last_seen %}
+            {% if user.last_seen %}
             <p>
-                Last seen on: {{ context.user.last_seen }}
+                Last seen on: {{ user.last_seen }}
             </p>
             {% endif %}
             <p>
-                {{ context.user.followed.count() }} following,
-                {{ context.user.followers.count() }} followers.
+                {{ user.followed.count() }} following,
+                {{ user.followers.count() }} followers.
             </p>
             <p>
-                {% if current_user == context.user %}
+                {% if current_user == user %}
                 <a href="{{ url_for('edit_profile') }}">
                     Edit Profile
                 </a>
-                {% elif current_user.is_following(context.user) %}
-                <a href="{{ url_for('unfollow', username=context.user.username) }}">
+                {% elif current_user.is_following(user) %}
+                <a href="{{ url_for('unfollow', username=user.username) }}">
                     Unfollow
                 </a>
                 {% else %}
-                <a href="{{ url_for('follow', username=context.user.username) }}">
+                <a href="{{ url_for('follow', username=user.username) }}">
                     Follow
                 </a>
                 {% endif %}
@@ -43,7 +43,13 @@
     </tr>
 </table>
 <hr>
-{% for post in context.posts %}
+{% for post in posts %}
 {% include '_post.html' %}
 {% endfor %}
+{% if prev_url %}
+<a href="{{ prev_url }}">Newer posts</a>
+{% endif %}
+{% if next_url %}
+<a href="{{ next_url }}">Older posts</a>
+{% endif %}
 {% endblock %}
