--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,13 +1,15 @@
-<table>
-    <tr valign="top">
-        <td>
-            <img src="{{ post.author.avatar(36) }}">
+<table class="table table-hover">
+    <tr>
+        <td width="70px">
+            <img src="{{ post.author.avatar(70) }}">
         </td>
         <td>
             <a href ="{{ url_for('user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
-            says: <b>{{ post.body }}</b>
+            said {{ moment(post.timestamp).fromNow() }}:
+            <br>
+            {{ post.body }}
         </td>
     </tr>
 </table>
