--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,36 +1,20 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
 <h1>
     Hello, {{ current_user.username }}!
 </h1>
+
 {% if form %}
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.post.label }}
-        <br>
-        {{ form.post(cols=40, rows=4) }}
-        <br>
-        {% for errors in form.post.errors %}
-        <span style="color: red;">
-            {{ error }}
-        </span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.submit }}
-    </p>
-</form>
+{{ wtf.quick_form(form) }}
+<br>
 {% endif %}
-<hr>
+
 {% for post in posts %}
 {% include '_post.html' %}
 {% endfor %}
-{% if prev_url %}
-<a href="{{ prev_url }}">Newer posts</a>
-{% endif %}
-{% if next_url %}
-<a href="{{ next_url }}">Older posts</a>
-{% endif %}
+
+{% include '_pagination.html' %}
+
 {% endblock %}
