--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block content %}
-<table>
-    <tr valign="top">
-        <td>
-            <img src="{{ user.avatar(128) }}">
+{% block app_content %}
+<table class="table table-hover">
+    <tr>
+        <td width="256px">
+            <img src="{{ user.avatar(256) }}">
         </td>
         <td>
             <h1>
@@ -17,7 +17,7 @@
             {% endif %}
             {% if user.last_seen %}
             <p>
-                Last seen on: {{ user.last_seen }}
+                Last seen on: {{ moment(user.last_seen).format('LLL') }}
             </p>
             {% endif %}
             <p>
@@ -42,14 +42,11 @@
         </td>
     </tr>
 </table>
-<hr>
+
 {% for post in posts %}
 {% include '_post.html' %}
 {% endfor %}
-{% if prev_url %}
-<a href="{{ prev_url }}">Newer posts</a>
-{% endif %}
-{% if next_url %}
-<a href="{{ next_url }}">Older posts</a>
-{% endif %}
+
+{% include '_pagination.html' %}
+
 {% endblock %}
