--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -9,7 +9,18 @@
             </a>
             said {{ moment(post.timestamp).fromNow() }}:
             <br>
-            {{ post.body }}
+            <span id="post{{ post.id }}">
+                {{ post.body }}
+            </span>
+            {% if post.language and post.language != g.locale %}
+            <br>
+            <br>
+            <span id="translation{{ post.id }}">
+                <a href="javascript:translate('#post{{ post.id }}','#translation{{ post.id }}','{{ g.locale }}')">
+                    Translate
+                </a>
+            </span>
+            {% endif %}
         </td>
     </tr>
 </table>
