--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -4,7 +4,7 @@
             <img src="{{ post.author.avatar(70) }}">
         </td>
         <td>
-            <a href ="{{ url_for('user', username=post.author.username) }}">
+            <a href ="{{ url_for('main.user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
             said {{ moment(post.timestamp).fromNow() }}:
@@ -17,7 +17,7 @@
             <br>
             <span id="translation{{ post.id }}">
                 <a href="javascript:translate('#post{{ post.id }}','#translation{{ post.id }}','{{ g.locale }}')">
-                    Translate
+                    Translate from {{ post.language.upper() }} to {{ g.locale.upper() }}
                 </a>
             </span>
             {% endif %}
