--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -11,7 +11,7 @@
 <br>
 <p>
     New User?
-    <a href="{{ url_for('register') }}">
+    <a href="{{ url_for('auth.register') }}">
         Click to Register!
     </a>
 </p>
