--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -26,15 +26,15 @@
             </p>
             <p>
                 {% if current_user == user %}
-                <a href="{{ url_for('edit_profile') }}">
+                <a href="{{ url_for('main.edit_profile') }}">
                     Edit Profile
                 </a>
                 {% elif current_user.is_following(user) %}
-                <a href="{{ url_for('unfollow', username=user.username) }}">
+                <a href="{{ url_for('main.unfollow', username=user.username) }}">
                     Unfollow
                 </a>
                 {% else %}
-                <a href="{{ url_for('follow', username=user.username) }}">
+                <a href="{{ url_for('main.follow', username=user.username) }}">
                     Follow
                 </a>
                 {% endif %}
