--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,13 @@ Welcome to Microblog!
                     <a href="{{ url_for('main.explore') }}">Explore</a>
                 </li>
             </ul>
+            {% if g.search_form %}
+            <form class="navbar-form navbar-left" method="get" action="{{ url_for('main.search') }}">
+                <div class="form-group">
+                    {{ g.search_form.search(size=20, class='form-control', placeholder=g.search_form.search.label.text) }}
+                </div>
+            </form>
+            {% endif %}
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_anonymous %}
                 <li>
