--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -4,9 +4,11 @@
             <img src="{{ post.author.avatar(70) }}">
         </td>
         <td>
-            <a href ="{{ url_for('main.user', username=post.author.username) }}">
-                {{ post.author.username }}
-            </a>
+            <span class="user_popup">
+                 <a href ="{{ url_for('main.user', username=post.author.username) }}">
+                    {{ post.author.username }}
+                </a>
+            </span>
             said {{ moment(post.timestamp).fromNow() }}:
             <br>
             <span id="post{{ post.id }}">
