--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -89,6 +89,33 @@ Welcome to Microblog!
             $(translation_id).text("Error: could not contact server")
         });
     }
+    $(function() {
+        var timer = null;
+        var xhr = null;
+        $('.user_popup').hover(function(event) {
+            var element = $(event.currentTarget)
+            timer = setTimeout(function() {
+                timer = null;
+                xhr = $.ajax('/user/' + element.first().text().trim() + '/popup').done(function(data) {
+                    xhr = null;
+                    element.popover({trigger: 'manual', html: true, animation: false, container: element, content: data
+                    }).popover('show');
+                    flask_moment_render_all();
+                });
+            }, 1000);
+        }, function(event) {
+            var element = $(event.currentTarget)
+            if (timer) {
+                clearTimeout(timer);
+                timer = null;
+            } else if (xhr) {
+                xhr.abort();
+                xhr = null;
+            } else {
+                element.popover('destroy');
+            }
+        });
+    });
 </script>
 {% endblock %}
 
