--- a/app/templates/_pagination.html
+++ b/app/templates/_pagination.html
@@ -4,14 +4,14 @@
         <li class="previous">
             <a href="{{ prev_url }}">
                 <span aria-hidden="true">&larr;</span>
-                Newer posts
+                Newer
             </a>
         </li>
         {% else %}
         <li class="previous disabled">
             <a href="#">
                 <span aria-hidden="true">&larr;</span>
-                Newer posts
+                Newer
             </a>
         </li>
         {% endif %}
@@ -19,14 +19,14 @@
         <li class="next">
             <a href="{{ next_url }}">
                 <span aria-hidden="true">&rarr;</span>
-                Older posts
+                Older
             </a>
         </li>
         {% else %}
         <li class="next disabled">
             <a href="#">
                 <span aria-hidden="true">&rarr;</span>
-                Older posts
+                Older
             </a>
         </li>
         {% endif %}
